[UI] Alerts overflow bug fix

--- a/src/clr-angular/emphasis/alert/_alert.clarity.scss
+++ b/src/clr-angular/emphasis/alert/_alert.clarity.scss
@@ -32,6 +32,7 @@
 
   .alert-icon-wrapper {
     flex: 0 0 $alertIconWidth;
+    align-self: start;
     padding-top: $clr-rem-1px;
     height: 0.75rem;
   }
@@ -193,7 +194,6 @@
     margin: 0;
     border: none;
     border-radius: 0;
-    max-height: 4rem;
     overflow-y: auto;
 
     @include generateAlertType(app-info);
@@ -236,7 +236,11 @@
 
     .alert-item > span,
     .alert-text {
-      flex: 0 0 auto;
+      flex: 0 1 auto;
+    }
+
+    .alert-icon-wrapper {
+      margin-top: 0.125rem;
     }
 
     .close {
